Fix footer lists alignment

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -39,6 +39,7 @@ footer {
 		place-items: flex-start;
 	}
 	.list {	
+		place-items: start;
 		text-align: left;
 	}
 }
